# editor

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  arkit.json  design.md  eslint.config.js  index.html  links.txt  package-lock.json  package.json  render.yaml  tsconfig.app.json  vercel.json  vite.config.ts  vitest.config.ts
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: __init__.py  admin.py  analyze.py  deps.py  panel.py  raw.py  refine.py  segment.py  session.py  state.py  telemetry.py  tools_rest.py
backend/app/config/: __init__.py  app_config.py  domain.py  env.py  runtime.py  ui.py
backend/app/engine/: registry.py
backend/app/mcp/: rate_limit.py  server.py  session.py
backend/app/registry/: compound_resolver.py  interpolate.py  loader.py  schema.py
backend/app/schemas/: __init__.py  _camel.py  enriched_context.py  errors.py  image_context.py  operation_graph.py  widget.py
backend/app/services/: analysis_eval.py  anthropic_client.py  autonomous_suggestions.py  cohort_store.py  disk_session_io.py  event_journal.py  image_validation.py  (+10 more)
backend/scripts/: download_sam.sh  migrate_fused_to_presets.py
backend/tests/: conftest.py  test_analyze_endpoint.py  test_anthropic_client.py  test_cache_markers.py  test_disk_session_io.py  test_panel_endpoint.py  test_refine.py  test_sam_client.py  test_schemas.py  test_segment_endpoint.py  test_session_endpoint.py  test_session_graphs.py  test_session_persistence.py  test_session_store.py
(+1361 files in other folders)
