[project]
name = "editor-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.31.0",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "anthropic==0.39.0",
  "python-multipart==0.0.12",
  "httpx==0.27.2",
  "Pillow>=10.0.0",
  "numpy>=1.26.0",
  "mcp>=1.0.0",
  "sse-starlette>=2.1.0",
  "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "respx==0.21.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
